--- a/views/fichas/newFichaHaitian.ejs
+++ b/views/fichas/newFichaHaitian.ejs
@@ -861,8 +861,8 @@
          <table class="table-bordered" style="margin-top: 40px;">
             <thead>
                <tr>
-                  <th colspan="4">STEAM(VAPOR)</th>
-                  <th colspan="3">
+                  <th>STEAM(VAPOR)</th>
+                  <th>
                      <select id="tolVapor" name="tolVapor" class="form-control">
                         <option value="0.1">TOL &#177; 10%</option>
                         <option value="0.05">TOL &#177; 5%</option>
@@ -875,103 +875,93 @@
             </thead>
             <tbody>
                <tr>
-                  <th colspan="3" style="text-align: center;">LADO FIXO</th>
-                  <th colspan="3" style="text-align: center;">LADO MÓVEL</th>
+                  <!-- <th colspan="3" style="text-align: center;">LADO FIXO</th> -->
+                  <!-- <th colspan="3" style="text-align: center;">LADO MÓVEL</th> -->
                </tr>
                <tr>
                   <!-- LADO FIXO -->
-                  <td colspan="2">
+                  <td>
                      <input style="width: 100%" id="vaporladofixo1" name="vaporladofixo1">
                   </td>
-                  <td colspan="1">
-                     <input checked type="radio" id="fixoAguaF1" name="fixoSteam" value="AguaF1">
-                     <label for="fixoAguaF1">Temp. Água Industrial F1</label>
+                  <td>
+                     <p for="fixoAguaF1">Temp. Água Industrial F1</p>
                   </td>
 
                   <!-- LADO MOVEL -->
-                  <td colspan="2">
+                  <!-- <td colspan="2">
                      <input style="width: 100%" id="vaporladomovel1" name="vaporladomovel1">
                   </td>
                   <td colspan="1">
-                     <input checked type="radio" id="movelAguaF1" name="movelSteam" value="AguaF1">
-                     <label for="movelAguaF1">Temp. Água Industrial F1</label>
-                  </td>
+                     <p for="movelAguaF1">Temp. Água Industrial F1</p>
+                  </td> -->
                </tr>
                <tr>
                   <!-- LADO FIXO -->
-                  <td colspan="2">
+                  <td>
                      <input style="width: 100%" id="vaporladofixo2" name="vaporladofixo2">
                   </td>
-                  <td colspan="1">
-                     <input type="radio" id="fixoAguaF2" name="fixoSteam" value="AguaF2">
-                     <label for="fixoAguaF2">Temp. Água Industrial F2</label>
+                  <td>
+                     <p for="fixoAguaF2">Temp. Água Industrial F2</p>
                   </td>
 
                   <!-- LADO MOVEL -->
-                  <td colspan="2">
+                  <!-- <td colspan="2">
                      <input style="width: 100%" id="vaporladomovel2" name="vaporladomovel2">
                   </td>
                   <td colspan="1">
-                     <input type="radio" id="movelAguaF2" name="movelSteam" value="AguaF2">
-                     <label for="movelAguaF2">Temp. Água Industrial F2</label>
-                  </td>
+                     <p for="movelAguaF2">Temp. Água Industrial F2</p>
+                  </td> -->
                </tr>
                <tr>
                   <!-- LADO FIXO -->
-                  <td colspan="2">
+                  <td>
                      <input style="width: 100%" id="vaporladofixo3" name="vaporladofixo3">
                   </td>
-                  <td colspan="1">
-                     <input type="radio" id="fixoVaporAgua" name="fixoSteam" value="Gelada">
-                     <label for="fixoVaporAgua">Temp. Água Gelada</label>
+                  <td>
+                     <p for="fixoVaporAgua">Temp. Água Gelada</p>
                   </td>
 
                   <!-- LADO MOVEL -->
-                  <td colspan="2">
+                  <!-- <td colspan="2">
                      <input style="width: 100%" id="vaporladomovel3" name="vaporladomovel3">
                   </td>
                   <td colspan="1">
-                     <input type="radio" id="movelVaporAgua" name="movelSteam" value="Gelada">
-                     <label for="movelVaporAgua">Temp. Água Gelada</label>
-                  </td>
+                     <p for="movelVaporAgua">Temp. Água Gelada</p>
+                  </td> -->
                </tr>
                <tr>
                   <!-- LADO FIXO -->
-                  <td colspan="2">
+                  <td>
                      <input style="width: 100%" id="vaporladofixo4" name="vaporladofixo4">
                   </td>
-                  <td colspan="1">
-                     <input type="radio" id="fixoVapor" name="fixoSteam" value="Vapor"><br>
-                     <label for="fixoVapor">Bar. Vapor</label>
+                  <td>
+                     <p for="fixoVapor">Bar. Vapor</p>
                   </td>
 
                   <!-- LADO MOVEL -->
-                  <td colspan="2">
+                  <!-- <td colspan="2">
                      <input style="width: 100%" id="vaporladomovel4" name="vaporladomovel4">
                   </td>
                   <td colspan="1">
-                     <input type="radio" id="movelVapor" name="movelSteam" value="Vapor"><br>
-                     <label for="movelVapor">Bar. Vapor</label>
-                  </td>
+                     <p for="movelVapor">Bar. Vapor</p>
+                  </td> -->
                </tr>
                <tr>
                   <!-- LADO FIXO -->
-                  <td colspan="2">
+                  <td>
                      <input style="width: 100%" id="vaporladofixo5" name="vaporladofixo5">
                   </td>
-                  <td colspan="1">
-                     <input type="radio" id="fixoAr" name="fixoSteam" value="Ar">
-                     <label for="fixoAr">Bar. Ar Comprimido</label>
+                  <td>
+                     <p for="fixoAr">Bar. Ar Comprimido</p>
                   </td>
 
                   <!-- LADO MOVEL -->
-                  <td colspan="2">
+                  <!-- <td colspan="2">
                      <input style="width: 100%" id="vaporladomovel5" name="vaporladomovel5">
                   </td>
                   <td colspan="1">
-                     <input type="radio" id="movelAr" name="movelSteam" value="Ar">
-                     <label for="movelAr">Bar. Ar Comprimido</label>
-                  </td>
+                     <p for="movelAr">Bar. Ar Comprimido</p>
+                  </td> -->
                </tr>
             </tbody>
          </table>
