--- a/views/fichas/newFichaHaitian.ejs
+++ b/views/fichas/newFichaHaitian.ejs
@@ -657,7 +657,7 @@
                   <th colspan="2">
                      <select id="tolCamara" name="tolCamara" class="form-control">
                         <option value="0.1">TOL &#177; 10%</option>
-                        <option value="0.05">TOL &#177; 5%</option>
+                        <option value="5">TOL &#177; 5°C</option>
                      </select>
                   </th>
                </tr>
