--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -905,7 +905,7 @@
                         <% if (perifericos.tolCamara === 0.1) { %>
                            <th colspan="5">TOL &#177; 10%</th>
                         <% } else { %>
-                           <th colspan="5">TOL &#177; 5%</th>
+                           <th colspan="5">TOL &#177; 5°C</th>
                         <% } %>
                      </tr>
                   </thead>
