coluna Type em Radial Hidraulico alterado

--- a/views/fichas/newFichaHaitian.ejs
+++ b/views/fichas/newFichaHaitian.ejs
@@ -546,21 +546,46 @@
                   <th colspan="1">TYPE</th>
                   <th colspan="1">
                      <select id="typeEntrada1" name="typeEntrada1" class="form-control">
+                        <option value="0">0</option>
                         <option value="Tempo">TEMPO</option>
                         <option value="Limite">LIMITE</option>
                      </select>
                   </th>
                   <th colspan="1">
                      <select id="typeSaida1" name="typeSaida1" class="form-control">
-                        <option value="Limite">LIMITE</option>
+                        <option value="0">0</option>
                         <option value="Tempo">TEMPO</option>
+                        <option value="Limite">LIMITE</option>
                      </select>
                   </th>
-                  <% for(var i = 0; i < 4; i++) { %>
-                     <td colspan="1">
-                        <input style="width: 100%" id="type<%= i+1 %>" name="type<%= i+1 %>">
-                     </td>
-                  <% } %>
+                  <th colspan="1">
+                     <select id="typeEntrada2" name="typeEntrada2" class="form-control">
+                        <option value="0">0</option>
+                        <option value="Tempo">TEMPO</option>
+                        <option value="Limite">LIMITE</option>
+                     </select>
+                  </th>
+                  <th colspan="1">
+                     <select id="typeSaida2" name="typeSaida2" class="form-control">
+                        <option value="0">0</option>
+                        <option value="Tempo">TEMPO</option>
+                        <option value="Limite">LIMITE</option>
+                     </select>
+                  </th>
+                  <th colspan="1">
+                     <select id="typeEntrada3" name="typeEntrada3" class="form-control">
+                        <option value="0">0</option>
+                        <option value="Tempo">TEMPO</option>
+                        <option value="Limite">LIMITE</option>
+                     </select>
+                  </th>
+                  <th colspan="1">
+                     <select id="typeSaida3" name="typeSaida3" class="form-control">
+                        <option value="0">0</option>
+                        <option value="Tempo">TEMPO</option>
+                        <option value="Limite">LIMITE</option>
+                     </select>
+                  </th>
                </tr>
                <tr>
                   <th scope="row" colspan="1">PRESSÃO</th>
