--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -751,18 +751,10 @@
                         <th colspan="1">TYPE</th>
                         <th colspan="1"><%= injetor.radialTypeEntrada1 %></th>
                         <th colspan="1"><%= injetor.radialTypeSaida1 %></th>
-                        <td colspan="1">
-                           <input class="read-only" readonly style="width: 100%" id="type1" name="type1" value="<%= injetor.radialTypeEntrada2 %>">
-                        </td>
-                        <td colspan="1">
-                           <input class="read-only" readonly style="width: 100%" id="type2" name="type2" value="<%= injetor.radialTypeSaida2 %>">
-                        </td>
-                        <td colspan="1">
-                           <input class="read-only" readonly style="width: 100%" id="type3" name="type3" value="<%= injetor.radialTypeEntrada3 %>">
-                        </td>
-                        <td colspan="1">
-                           <input class="read-only" readonly style="width: 100%" id="type4" name="type4" value="<%= injetor.radialTypeSaida3 %>">
-                        </td>
+                        <th colspan="1"><%= injetor.radialTypeEntrada2 %></th>
+                        <th colspan="1"><%= injetor.radialTypeSaida2 %></th>
+                        <th colspan="1"><%= injetor.radialTypeEntrada3 %></th>
+                        <th colspan="1"><%= injetor.radialTypeSaida3 %></th>
                      </tr>
                      <tr>
                         <th scope="row" colspan="1">PRESSÃO</th>
