--- a/views/revisao/editRevisao.ejs
+++ b/views/revisao/editRevisao.ejs
@@ -748,28 +748,46 @@
                   <th colspan="1">TYPE</th>
                   <th colspan="1">
                      <select id="typeEntrada1" name="typeEntrada1" class="form-control">
+                        <option value="0">0</option>
                         <option value="Tempo">TEMPO</option>
                         <option value="Limite">LIMITE</option>
                      </select>
                   </th>
                   <th colspan="1">
                      <select id="typeSaida1" name="typeSaida1" class="form-control">
-                        <option value="Limite">LIMITE</option>
+                        <option value="0">0</option>
                         <option value="Tempo">TEMPO</option>
+                        <option value="Limite">LIMITE</option>
                      </select>
                   </th>
-                  <td colspan="1">
-                     <input style="width: 100%" id="type1" name="type1" value="<%= injetor.radialTypeEntrada2 %>">
-                  </td>
-                  <td colspan="1">
-                     <input style="width: 100%" id="type2" name="type2" value="<%= injetor.radialTypeSaida2 %>">
-                  </td>
-                  <td colspan="1">
-                     <input style="width: 100%" id="type3" name="type3" value="<%= injetor.radialTypeEntrada3 %>">
-                  </td>
-                  <td colspan="1">
-                     <input style="width: 100%" id="type4" name="type4" value="<%= injetor.radialTypeSaida3 %>">
-                  </td>
+                  <th colspan="1">
+                     <select id="typeEntrada2" name="typeEntrada2" class="form-control">
+                        <option value="0">0</option>
+                        <option value="Tempo">TEMPO</option>
+                        <option value="Limite">LIMITE</option>
+                     </select>
+                  </th>
+                  <th colspan="1">
+                     <select id="typeSaida2" name="typeSaida2" class="form-control">
+                        <option value="0">0</option>
+                        <option value="Tempo">TEMPO</option>
+                        <option value="Limite">LIMITE</option>
+                     </select>
+                  </th>
+                  <th colspan="1">
+                     <select id="typeEntrada3" name="typeEntrada3" class="form-control">
+                        <option value="0">0</option>
+                        <option value="Tempo">TEMPO</option>
+                        <option value="Limite">LIMITE</option>
+                     </select>
+                  </th>
+                  <th colspan="1">
+                     <select id="typeSaida3" name="typeSaida3" class="form-control">
+                        <option value="0">0</option>
+                        <option value="Tempo">TEMPO</option>
+                        <option value="Limite">LIMITE</option>
+                     </select>
+                  </th>
                </tr>
                <tr>
                   <th scope="row" colspan="1">PRESSÃO</th>
