desabilita botao editar enquanto usuario nao logar

--- a/views/fichas/editHaitian.ejs
+++ b/views/fichas/editHaitian.ejs
@@ -2132,7 +2132,7 @@
                </div>
             
                <br>
-               <button class="btn btn-primary">Editar</button>
+               <button class="btn btn-primary" id="edit">Editar</button>
             </form>
 
             <form method="GET" action="/ficha/lista" style="display: inline;">
