--- a/views/fichas/newFichaHaitian.ejs
+++ b/views/fichas/newFichaHaitian.ejs
@@ -722,16 +722,12 @@
             </thead>
             <tbody>
                <tr>
-                  <th>BICO</th>
-                  <th>DLY TIME</th>
-                  <th>ACT TIME</th>
-                  <th>BICO</th>
-                  <th>DLY TIME</th>
-                  <th>ACT TIME</th>
+                  <th colspan="1">BICO</th>
+                  <th colspan="3">DLY TIME</th>
+                  <th colspan="3">ACT TIME</th>
                </tr>
                <% count = 0 %>
-               <% count2 = 20 %>
-               <% for(var j = 0; j < 20; j++) { %>
+               <% for(var j = 0; j < 8; j++) { %>
                   <tr>
                      <!-- lado esquerdo -->
                      <% for(var i = 0; i < 1; i++) { %> 
@@ -739,19 +735,84 @@
                      <% } %>
                      
                      <% for(var i = 0; i < 2; i++) { %>
-                        <td>
+                        <td colspan="3">
                            <input style="width: 100%" id="VG1" name="VG1" placeholder="VG<%= j+1 %>">
                         </td>
                      <% } %>
-                        
-                     <!-- lado direito -->
-                     <% for(var i = 0; i < 1; i++) { %>
-                        <th>VG<%= ++count2 %></th>
+                  </tr>
+               <% } %>
+               <tr>
+                  <td style="border-right: none; height: 40px;">
+                     <p class="read-only" readonly style="width: 100%;"></p>
+                  </td>
+               </tr>
+               <% for(var j = 8; j < 16; j++) { %>
+                  <tr>
+                     <!-- lado esquerdo -->
+                     <% for(var i = 0; i < 1; i++) { %> 
+                        <th>VG<%= j+1 %></th>
                      <% } %>
                      
                      <% for(var i = 0; i < 2; i++) { %>
-                        <td>
-                           <input style="width: 100%" id="VG2" name="VG2" placeholder="VG<%= count2 %>">
+                        <td colspan="3">
+                           <input style="width: 100%" id="VG1" name="VG1" placeholder="VG<%= j+1 %>">
+                        </td>
+                     <% } %>
+                  </tr>
+               <% } %>
+               <tr>
+                  <td style="border-right: none; height: 40px;">
+                     <p class="read-only" readonly style="width: 100%;"></p>
+                  </td>
+               </tr>
+               <% for(var j = 16; j < 24; j++) { %>
+                  <tr>
+                     <!-- lado esquerdo -->
+                     <% for(var i = 0; i < 1; i++) { %> 
+                        <th>VG<%= j+1 %></th>
+                     <% } %>
+                     
+                     <% for(var i = 0; i < 2; i++) { %>
+                        <td colspan="3">
+                           <input style="width: 100%" id="VG1" name="VG1" placeholder="VG<%= j+1 %>">
+                        </td>
+                     <% } %>
+                  </tr>
+               <% } %>
+               <tr>
+                  <td style="border-right: none; height: 40px;">
+                     <p class="read-only" readonly style="width: 100%;"></p>
+                  </td>
+               </tr>
+               <% for(var j = 24; j < 32; j++) { %>
+                  <tr>
+                     <!-- lado esquerdo -->
+                     <% for(var i = 0; i < 1; i++) { %> 
+                        <th>VG<%= j+1 %></th>
+                     <% } %>
+                     
+                     <% for(var i = 0; i < 2; i++) { %>
+                        <td colspan="3">
+                           <input style="width: 100%" id="VG1" name="VG1" placeholder="VG<%= j+1 %>">
+                        </td>
+                     <% } %>
+                  </tr>
+               <% } %>
+               <tr>
+                  <td style="border-right: none; height: 40px;">
+                     <p class="read-only" readonly style="width: 100%;"></p>
+                  </td>
+               </tr>
+               <% for(var j = 32; j < 40; j++) { %>
+                  <tr>
+                     <!-- lado esquerdo -->
+                     <% for(var i = 0; i < 1; i++) { %> 
+                        <th>VG<%= j+1 %></th>
+                     <% } %>
+                     
+                     <% for(var i = 0; i < 2; i++) { %>
+                        <td colspan="3">
+                           <input style="width: 100%" id="VG1" name="VG1" placeholder="VG<%= j+1 %>">
                         </td>
                      <% } %>
                   </tr>
