script para retirar opçao de remover itens caso usuário não for admin

--- a/views/maquinas/index.ejs
+++ b/views/maquinas/index.ejs
@@ -38,7 +38,7 @@
                     
                     <form method="POST" action="/maquinas/delete" style="display: inline;" onsubmit="confirmarDelecao(event, this)"> 
                             <input type="hidden" name="id" value="<%= article.id %>">
-                            <button class="btn btn-danger"> Remover</button>
+                            <button id="remover" class="btn btn-danger"> Remover</button>
                     </form> </th>
                 </td>
             </tr>
