--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,5 +13,7 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
     <script src="/scripts/plotly-latest.min.js"></script>
+    <script src=/scripts/jquery.js></script>
+    <script src=/scripts/notAdminScript.js></script>
 
   </head>
