posicao tabela voltagem alterado

--- a/views/fichas/newFichaHaitian.ejs
+++ b/views/fichas/newFichaHaitian.ejs
@@ -90,7 +90,7 @@
             </tbody>
          </table>
    
-         <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+         <table class="table-bordered" style="width: 100%;">
             <thead>
                <tr>
                   <th colspan="5">INJEÇÃO</th>
@@ -154,7 +154,7 @@
             </tfoot>
          </table>
    
-         <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+         <table class="table-bordered" style="width: 100%;">
             <thead>
                <tr>
                   <th colspan="5">RECALQUE</th>
@@ -200,7 +200,7 @@
             </tbody>
          </table>
    
-         <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+         <table class="table-bordered" style="width: 100%;">
             <thead>
                <tr>
                   <th colspan="5">DOSAGEM</th>
@@ -262,7 +262,7 @@
             </tfoot>
          </table>
    
-         <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+         <table class="table-bordered" style="width: 100%;">
             <thead>
                <tr>
                   <th colspan="5">DESCOMPRESSÃO</th>
@@ -301,7 +301,7 @@
             </tbody>
          </table>
    
-         <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+         <table class="table-bordered" style="width: 100%;">
             <thead>
                <tr>
                   <th colspan="5">FECHAMENTO</th>
@@ -379,7 +379,7 @@
             </tfoot>
          </table>
    
-         <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+         <table class="table-bordered" style="width: 100%;">
             <thead>
                <tr>
                   <th colspan="5">ABERTURA</th>
@@ -437,7 +437,7 @@
             </tfoot>
          </table>
    
-         <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+         <table class="table-bordered" style="width: 100%;">
             <thead>
                <tr>
                   <th colspan="5">EXTRAÇÃO</th>
@@ -517,7 +517,7 @@
             </tfoot>
          </table>
    
-         <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+         <table class="table-bordered" style="width: 100%;">
             <thead>
                <tr>
                   <th colspan="5">RADIAL HIDRÁULICO</th>
@@ -646,16 +646,6 @@
                      <input type="radio" id="termopar" name="termopar" value="J">
                      <label for="termopar">J</label>
                   </td>
-   
-                  <th colspan="1">VOLTAGEM:</th>
-                  <td colspan="1">
-                     <input checked type="radio" id="voltagem" name="voltagem" value="220">
-                     <label for="voltagem">220</label>
-                  </td>
-                  <td colspan="1">
-                     <input type="radio" id="voltagem" name="voltagem" value="24">
-                     <label for="voltagem">24</label>
-                  </td>
                </tr>
             </tbody>
          </table>
@@ -706,6 +696,22 @@
          </table>
          
          <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+            <tbody>
+               <tr>      
+                  <th colspan="1">VOLTAGEM:</th>
+                  <td colspan="1">
+                     <input checked type="radio" id="voltagem" name="voltagem" value="220">
+                     <label for="voltagem">220</label>
+                  </td>
+                  <td colspan="1">
+                     <input type="radio" id="voltagem" name="voltagem" value="24">
+                     <label for="voltagem">24</label>
+                  </td>
+               </tr>
+            </tbody>
+         </table>
+
+         <table class="table-bordered" style="width: 100%; margin-top: 30px;">
             <thead>
                <tr>
                   <th colspan="4">VALVE GATES</th>
