--- a/views/revisao/editRevisao.ejs
+++ b/views/revisao/editRevisao.ejs
@@ -913,16 +913,6 @@
                      <input type="radio" id="termoparEditJ" name="termopar" value="J">
                      <label for="termopar">J</label>
                   </td>
-   
-                  <th colspan="1">VOLTAGEM:</th>
-                  <td colspan="1">
-                     <input type="radio" id="voltagemEdit220" name="voltagem" value="220">
-                     <label for="voltagem">220</label>
-                  </td>
-                  <td colspan="1">
-                     <input type="radio" id="voltagemEdit24" name="voltagem" value="24">
-                     <label for="voltagem">24</label>
-                  </td>
                </tr>
             </tbody>
          </table>
@@ -1522,6 +1512,22 @@
             </tbody>
          </table>
          
+         <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+            <tbody>
+               <tr>               
+                  <th colspan="1">VOLTAGEM:</th>
+                  <td colspan="1">
+                     <input type="radio" id="voltagemEdit220" name="voltagem" value="220">
+                     <label for="voltagem">220</label>
+                  </td>
+                  <td colspan="1">
+                     <input type="radio" id="voltagemEdit24" name="voltagem" value="24">
+                     <label for="voltagem">24</label>
+                  </td>
+               </tr>
+            </tbody>
+         </table>
+
          <table class="table-bordered" style="width: 100%; margin-top: 40px">
             <thead>
                <tr>
