--- a/views/fichas/editHaitian.ejs
+++ b/views/fichas/editHaitian.ejs
@@ -926,16 +926,6 @@
                                  <input type="radio" id="termoparEditJ" name="termopar" value="J">
                                  <label for="termopar">J</label>
                               </td>
-               
-                              <th colspan="1">VOLTAGEM:</th>
-                              <td colspan="1">
-                                 <input type="radio" id="voltagemEdit220" name="voltagem" value="220">
-                                 <label for="voltagem">220</label>
-                              </td>
-                              <td colspan="1">
-                                 <input type="radio" id="voltagemEdit24" name="voltagem" value="24">
-                                 <label for="voltagem">24</label>
-                              </td>
                            </tr>
                         </tbody>
                      </table>
@@ -1535,7 +1525,23 @@
                         </tbody>
                      </table>
                      
-                     <table class="table-bordered" style="width: 100%; margin-top: 40px">
+                     <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+                        <tbody>
+                           <tr>               
+                              <th colspan="1">VOLTAGEM:</th>
+                              <td colspan="1">
+                                 <input type="radio" id="voltagemEdit220" name="voltagem" value="220">
+                                 <label for="voltagem">220</label>
+                              </td>
+                              <td colspan="1">
+                                 <input type="radio" id="voltagemEdit24" name="voltagem" value="24">
+                                 <label for="voltagem">24</label>
+                              </td>
+                           </tr>
+                        </tbody>
+                     </table>
+
+                     <table class="table-bordered" style="width: 100%; margin-top: 30px">
                         <thead>
                            <tr>
                               <th colspan="4">VALVE GATES</th>
