--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -878,14 +878,6 @@
                         <td colspan="1">
                            <p id="termoparJ">J</p>
                         </td>
-         
-                        <th colspan="1">VOLTAGEM:</th>
-                        <td colspan="1">
-                           <p id="voltagem220">220</p>
-                        </td>
-                        <td colspan="1">
-                           <p id="voltagem24">24</p>
-                        </td>
                      </tr>
                   </tbody>
                </table>
@@ -1469,6 +1461,20 @@
                   </tbody>
                </table>
                
+               <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+                  <tbody>
+                     <tr>               
+                        <th colspan="1">VOLTAGEM:</th>
+                        <td colspan="1">
+                           <p id="voltagem220">220</p>
+                        </td>
+                        <td colspan="1">
+                           <p id="voltagem24">24</p>
+                        </td>
+                     </tr>
+                  </tbody>
+               </table>
+
                <table class="table-bordered" style="width: 100%; margin-top: 40px">
                   <thead>
                      <tr>
@@ -2092,255 +2098,17 @@
 
       <!-- COMPARACAO PARAMETROS -->
       <div id="parametrosRevisao">
-         <div class="d-flex flex-column ficha">
-            <div class="d-flex flex-row">
-               <div style="width: 10px; height: 10px; background-color: blue; margin-right: 5px;"></div>Valores cadastrados
-            </div>
-            <div class="d-flex flex-row">
-               <div style="width: 10px; height: 10px; background-color: green; margin-right: 5px;"></div>Valores reais
-            </div>
-         </div>
-         <br>
-         
-         <div class="table-responsive">
-            <table id="headerFicha" class="table-bordered ficha" style="width: 100%; margin-bottom: 40px;">
-               <thead>
-                  <tr>
-                     <th>Número do Molde:</th>
-                     <th>Número da Máquina:</th>
-                     <th>Cliente:</th>
-                     <th>Código PAM:</th>
-                     <th>Técnico:</th>
-                     <th>Produto:</th>
-                     <th>Material:</th>
-                     <th>Revisão:</th>
-                  </tr>
-               </thead>
-               <tbody></tbody>
-            </table>
-         </div>
-         
-         
-         <div class="d-flex justify-content-between">
-            <!-- INJETORES -->
-            <div class="d-flex flex-column table-responsive table-ficha justify-content-between" style="width: 50vw; margin-right: 20px;">
-               <table id="cilindro" class="table-bordered" style="width: 100%;">
-                  <thead>
-                     <tr id="headCilindro">
-                        <th colspan="4">CILINDRO</th>
-                        <th colspan="2">BICO</th>
-                     </tr>
-                     <tr>
-                        <% for(var i = 0; i < 7; i++) { %>
-                           <th><%= i+1 %></th>
-                        <% } %>
-                     </tr>
-                  </thead>
-                  <tbody></tbody>
-               </table>
-         
-               <table id="injecao" class="table-bordered" style="width: 100%; margin-top: 30px">
-                  <thead>
-                     <tr id="headInjecao">
-                        <th colspan="6">INJEÇÃO</th>
-                     </tr>
-                     <tr>
-                        <th colspan="2">COMUTAÇÃO</th>
-                        <% for(var i = 5; i >= 1; i--) { %>
-                           <th colspan="1">INJ. <%= i %></th>
-                        <% } %>
-                     </tr>
-                  </thead>
-                  <tbody></tbody>
-                  <tfoot id="injecaoFoot"></tfoot>
-               </table>
-         
-               <table id="recalque" class="table-bordered" style="width: 100%; margin-top: 30px">
-                  <thead>
-                     <tr id="headRecalque">
-                        <th colspan="6">RECALQUE</th>
-                     </tr>
-                     <tr>
-                        <th colspan="2">bar / seg / %</th>
-                        <% for(var i = 5; i >= 1; i--) { %>
-                           <th colspan="1">MANT. <%= i %></th>
-                        <% } %>
-                     </tr>
-                  </thead>
-                  <tbody></tbody>
-               </table>
-         
-               <table id="dosagem" class="table-bordered" style="width: 100%; margin-top: 30px">
-                  <thead>
-                     <tr id="headDosagem">
-                        <th colspan="6">DOSAGEM</th>
-                     </tr>
-                     <tr>
-                        <th colspan="2"></th>
-                        <% for(var i = 5; i >= 1; i--) { %>
-                           <th colspan="1">CARGA. <%= i %></th>
-                        <% } %>
-                     </tr>
-                  </thead>
-                  <tbody></tbody>
-                  <tfoot id="dosagemFoot"></tfoot>
-               </table>
-         
-               <table id="descompressao" class="table-bordered" style="width: 100%; margin-top: 30px">
-                  <thead>
-                     <tr id="headDescompressao">
-                        <th colspan="6">DESCOMPRESSÃO</th>
-                     </tr>
-                     <tr>
-                        <th colspan="3">DESCOMPRIMIR</th>
-                        <th colspan="1">POSIÇÃO</th>
-                        <th colspan="1">PRESSÃO</th>
-                        <th colspan="1">FLUXO</th>
-                        <th colspan="1">TEMPO</th>
-                     </tr>
-                  </thead>
-                  <tbody></tbody>
-               </table>
-         
-               <table id="fechamento" class="table-bordered" style="width: 100%; margin-top: 30px">
-                  <thead>
-                     <tr id="headFechamento">
-                        <th colspan="6">FECHAMENTO</th>
-                     </tr>
-                     <tr>
-                        <th colspan="2"></th>
-                        <% for(var i = 1; i <= 3; i++) { %>
-                           <th colspan="1">FECHA. <%= i %></th>
-                        <% } %>
-                        <th colspan="1">PROT.M</th>
-                        <th colspan="1">ALTA PRESSÃO</th>
-                     </tr>
-                  </thead>
-                  <tbody></tbody>
-                  <tfoot id="fechamentoFoot"></tfoot>
-               </table>
-         
-               <table id="abertura" class="table-bordered" style="width: 100%; margin-top: 30px">
-                  <thead>
-                     <tr id="headAbertura">
-                        <th colspan="6">ABERTURA</th>
-                     </tr>
-                     <tr>
-                        <th colspan="2"></th>
-                        <% for(var i = 5; i >= 1; i--) { %>
-                           <th colspan="1">ABRIR. <%= i %></th>
-                        <% } %>
-                     </tr>
-                  </thead>
-                  <tbody></tbody>
-                  <tfoot id="aberturaFoot"></tfoot>
-               </table>
-         
-               <table id="extracao" class="table-bordered" style="width: 100%; margin-top: 30px">
-                  <thead>
-                     <tr id="headExtracao">
-                        <th colspan="6">EXTRAÇÃO</th>
-                     </tr>
-                     <tr>
-                        <th rowspan="2" colspan="1"></th>
-                        <th colspan="3">AVANÇO</th>
-                        <th colspan="3">RECUO</th>
-                     </tr>
-                     <tr>
-                        <% for(var i = 1; i <= 3; i++) { %>
-                           <th colspan="1">EXTRAIR. <%= i %></th>
-                        <% } %>
-                        <% for(var i = 3; i >= 1; i--) { %>
-                           <th colspan="1">EXTRAIR. <%= i %></th>
-                        <% } %>
-                     </tr>
-                  </thead>
-                  <tbody></tbody>
-                  <tfoot id="extracaoFoot"></tfoot>
-               </table>
-         
-               <table id="radial" class="table-bordered" style="width: 100%; margin-top: 30px">
-                  <thead>
-                     <tr  id="headRadial">
-                        <th colspan="6">RADIAL HIDRÁULICO</th>
-                     </tr>
-                     <tr>
-                        <th rowspan="2" colspan="1"></th>
-                        <% for(var i = 1; i <= 3; i++) { %>
-                           <th colspan="2">RADIAL</th>
-                        <% } %>
-                     </tr>
-                     <tr>
-                        <% for(var i = 1; i <= 3; i++) { %>
-                           <th colspan="1">ENTRADA</th>
-                           <th colspan="1">SAÍDA</th>
-                        <% } %>
-                     </tr>
-                  </thead>
-                  <tbody></tbody>
-               </table>
-            </div>
-            <!-- FIM INJETORES -->
-         
-            <!-- PERIFÉRICOS -->
-            <div class="table-responsive table-ficha d-flex flex-column justify-content-between" style="width: 50vw;">
-               <table id="termopar" class="table-bordered" style="width: 100%">
-                  <tbody></tbody>
-               </table>
-         
-               <table id="camaraQuente" class="table-bordered" style="width: 100%; margin-top: 40px;">
-                  <thead>
-                     <tr id="headCamara">
-                        <th colspan="5">CÂMARA QUENTE</th>
-                     </tr>
-                  </thead>
-                  <tbody></tbody>
-               </table>
-         
-               <table id="valveGate" class="table-bordered" style="width: 100%; margin-top: 40px;">
-                  <thead>
-                     <tr id="headValve">
-                        <th colspan="5">VALVE GATES</th>
-                     </tr>
-                     <tr>
-                        <th colspan="7">SEQUENCIADOR</th>
-                     </tr>
-                  </thead>
-                  <tbody></tbody>
-               </table>
-         
-               <table id="refrigeracao" class="table-bordered" style="margin-top: 40px;">
-                  <thead>
-                     <tr id="headRefrigeracao">
-                        <th colspan="5">REFRIGERAÇÃO DO MOLDE</th>
-                     </tr>
-                  </thead>
-                  <tbody></tbody>
-               </table>
-         
-               <table id="vapor" class="table-bordered" style="margin-top: 40px;">
-                  <thead>
-                     <tr id="headVapor">
-                        <th colspan="5">STEAM(VAPOR)</th>
-                     </tr>
-                     <tr>
-                        <th colspan="7">REFRIGERAÇÃO DO MOLDE</th>
-                     </tr>
-                  </thead>
-                  <tbody></tbody>
-               </table>
-            </div>
-            <!-- FIM PERIFÉRICOS -->
-         </div>
+         <%- include ('./indexComparacao.ejs') %>
       </div>
+      <!-- FIM COMPARACAO -->
    </div>
-   <!-- FIM COMPARACAO -->
 
    <div id="editRevisao">
       <%- include ('./editRevisao.ejs') %>
    </div>
    <br>
 
+   <!-- MODAL DIALOGO LOGIN -->
    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModal" aria-hidden="true">
       <div class="modal-dialog">
          <div class="modal-content">
@@ -2356,6 +2124,20 @@
                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
             </div>
          </div>
+      </div>
+   </div>
+   
+   <!-- MODAL PLOTLY -->
+   <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="myModal" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+         <div class="modal-body">
+            <div id="plotly"></div>
+         </div>
+         <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+         </div>
+      </div>
       </div>
    </div>
 </div>
