botao que leva para a tela de comparação entre parametros

--- a/views/fichas/list.ejs
+++ b/views/fichas/list.ejs
@@ -7,6 +7,7 @@
    <h2>Lista de Fichas Técnicas</h2> 
    <a class="btn btn-success" href="/novaficha"> Inserir Nova Ficha Técnica</a>
    <a class="btn btn-success" href="/ficha/lista"> Lista de Fichas Técnicas</a>
+   <a class="btn btn-success" href="/fichas">Comparar Valores</a>
    <hr>
 
    <h5>Selecione uma máquina:</h5>
