--- a/views/revisao/indexHaitian.ejs
+++ b/views/revisao/indexHaitian.ejs
@@ -6,6 +6,7 @@
    <h2>Fichas Técnicas</h2> 
    <a class="btn btn-success" href="/novaficha"> Inserir Nova Ficha Técnica</a>
    <a class="btn btn-success" href="/ficha/lista"> Lista de Fichas Técnicas</a>
+   <a class="btn btn-success" href="/fichas">Comparar Valores</a>
    <hr>
    
    <table class="table table-bordered"> 
