--- a/views/fichas/newFichaHaitian.ejs
+++ b/views/fichas/newFichaHaitian.ejs
@@ -640,11 +640,11 @@
                   <th colspan="1">TERMOPAR:</th>
                   <td colspan="1">
                      <input checked type="radio" id="termopar" name="termopar" value="K">
-                     <label for="termopar">K</label>
+                     <label class="labels" for="termopar">K</label>
                   </td>
                   <td colspan="1">
                      <input type="radio" id="termopar" name="termopar" value="J">
-                     <label for="termopar">J</label>
+                     <label class="labels" for="termopar">J</label>
                   </td>
                </tr>
             </tbody>
@@ -701,11 +701,11 @@
                   <th colspan="1">VOLTAGEM:</th>
                   <td colspan="1">
                      <input checked type="radio" id="voltagem" name="voltagem" value="220">
-                     <label for="voltagem">220</label>
+                     <label class="labels" for="voltagem">220</label>
                   </td>
                   <td colspan="1">
                      <input type="radio" id="voltagem" name="voltagem" value="24">
-                     <label for="voltagem">24</label>
+                     <label class="labels" for="voltagem">24</label>
                   </td>
                </tr>
             </tbody>
