--- a/views/revisao/editRevisao.ejs
+++ b/views/revisao/editRevisao.ejs
@@ -907,11 +907,11 @@
                   <th colspan="1">TERMOPAR:</th>
                   <td colspan="1">
                      <input type="radio" id="termoparEditK" name="termopar" value="K">
-                     <label for="termopar">K</label>
+                     <label class="labels" for="termopar">K</label>
                   </td>
                   <td colspan="1">
                      <input type="radio" id="termoparEditJ" name="termopar" value="J">
-                     <label for="termopar">J</label>
+                     <label class="labels" for="termopar">J</label>
                   </td>
                </tr>
             </tbody>
@@ -1518,11 +1518,11 @@
                   <th colspan="1">VOLTAGEM:</th>
                   <td colspan="1">
                      <input type="radio" id="voltagemEdit220" name="voltagem" value="220">
-                     <label for="voltagem">220</label>
+                     <label class="labels" for="voltagem">220</label>
                   </td>
                   <td colspan="1">
                      <input type="radio" id="voltagemEdit24" name="voltagem" value="24">
-                     <label for="voltagem">24</label>
+                     <label class="labels" for="voltagem">24</label>
                   </td>
                </tr>
             </tbody>
