--- a/views/revisao/editRevisao.ejs
+++ b/views/revisao/editRevisao.ejs
@@ -2198,5 +2198,5 @@
 </script>
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src=/scripts/documentScripts.js></script>
+<!-- <script src=/scripts/documentScripts.js></script> -->
 <script src=/scripts/editRevisaoScript.js></script>
