--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -2106,12 +2106,13 @@
                <!-- FIM PERIFÉRICOS -->
             </div>
          </div>
-   
+         
          <!-- COMPARACAO PARAMETROS -->
          <div id="parametrosRevisao">
             <%- include ('./indexComparacao.ejs') %>
          </div>
          <!-- FIM COMPARACAO -->
+         <br class="dont-print">
       </div>
    
       <div id="editRevisao">
