adicionado opção de escolher data para buscar os parâmetros da coleta

--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -26,11 +26,11 @@
    
 
    <br>
-   <!-- <div id="setDate">
+   <div id="setDate">
       <label style="font-weight: 600;" for="data">Informar data específica para buscar os dados da coleta:</label>
       <input type="date" id="data">
-      <button class="btn btn-primary">Enviar</button>
-   </div> -->
+      <button class="btn btn-primary" onclick="getDate()">Enviar</button>
+   </div>
    
    <div id="nav"></div>
    <br>
