--- a/views/revisao/indexComparacao.ejs
+++ b/views/revisao/indexComparacao.ejs
@@ -1,4 +1,13 @@
-<div class="d-flex flex-column ficha">
+<br>
+<div id="setDate" style="margin: 0 10px;">
+   <label style="font-weight: 600;" for="data">Informar data específica para buscar os dados da coleta:</label>
+   <input type="date" id="data">
+   <button class="btn btn-primary" onclick="getDate()">Enviar</button>
+</div>
+<br>
+
+
+<div class="d-flex flex-column ficha" style="margin: 0 10px;">
    <div class="d-flex flex-row">
       <div style="width: 10px; height: 10px; background-color: blue; margin-right: 5px;"></div>Valores cadastrados
    </div>
