--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -87,9 +87,9 @@
                <textarea style="background-color: #fff;" readonly class="form-control" id="justificativa" name="justificativa"></textarea>
             </div>
    
-            <div id="ficha-container" class="d-flex justify-content-between">
+            <div class="d-flex justify-content-between ficha-container">
                <!-- INJETORES -->
-               <div id="container-injetores" class="d-flex flex-column table-responsive table-ficha justify-content-between" style="width: 50vw; margin-right: 20px;">
+               <div class="d-flex flex-column table-responsive table-ficha justify-content-between container-injetores" style="width: 50vw; margin-right: 20px;">
                   <table class="table-bordered" style="width: 100%;">
                      <thead>
                         <tr>
@@ -734,7 +734,7 @@
                      </tfoot>
                   </table>
             
-                  <table id="radial" class="table-bordered" style="width: 100%; margin-top: 40px;">
+                  <table class="table-bordered" style="width: 100%; margin-top: 40px;">
                      <thead>
                         <tr>
                            <th colspan="6">RADIAL HIDRÁULICO</th>
@@ -878,7 +878,7 @@
                <!-- FIM INJETORES -->      
                
                <!-- PERIFÉRICOS -->
-               <div id="container-perifericos" class="table-responsive table-ficha d-flex flex-column justify-content-between" style="width: 50vw;">
+               <div class="table-responsive table-ficha d-flex flex-column justify-content-between container-perifericos" style="width: 50vw;">
                   <table id="termoparTable" class="table-bordered" style="width: 100%">
                      <tbody>
                         <tr>
