--- a/views/revisao/indexComparacao.ejs
+++ b/views/revisao/indexComparacao.ejs
@@ -1,24 +1,24 @@
-<br>
-<div id="setDate" style="margin: 0 10px;">
+<br class="dont-print">
+<div class="dont-print" id="setDate" style="margin: 0 10px;">
    <label style="font-weight: 600;" for="data">Informar data específica para buscar os dados da coleta:</label>
    <input type="date" id="data">
    <button class="btn btn-primary" onclick="getDate()">Enviar</button>
 </div>
-<br>
+<br class="dont-print">
 
 
 <div class="d-flex flex-column ficha" style="margin: 0 10px;">
    <div class="d-flex flex-row">
-      <div style="width: 10px; height: 10px; background-color: blue; margin-right: 5px;"></div>Valores cadastrados
+      <div style="width: 10px; height: 10px; background-color: blue; margin-right: 5px;"></div><span id="cadastrado">Valores cadastrados</span>
    </div>
    <div class="d-flex flex-row">
-      <div style="width: 10px; height: 10px; background-color: green; margin-right: 5px;"></div>Valores reais
+      <div style="width: 10px; height: 10px; background-color: green; margin-right: 5px;"></div><span id="reais">Valores reais</span>
    </div>
 </div>
 <br>
 
 <div class="table-responsive">
-   <table id="headerFicha" class="table-bordered ficha" style="width: 100%; margin-bottom: 40px;">
+   <table id="headerFicha" class="table-bordered ficha" style="width: 96%; margin: 0 auto; margin-bottom: 40px;">
       <thead>
          <tr>
             <th>Número do Molde:</th>
@@ -36,9 +36,9 @@
 </div>
 
 
-<div class="d-flex justify-content-between">
+<div class="d-flex justify-content-between ficha-container">
    <!-- INJETORES -->
-   <div class="d-flex flex-column table-responsive table-ficha justify-content-between" style="width: 50vw; margin-right: 20px;">
+   <div class="d-flex flex-column table-responsive table-ficha justify-content-between container-injetores" style="width: 50vw; margin-right: 20px; margin-left: 20px;">
       <table id="cilindro" class="table-bordered" style="width: 100%;">
          <thead>
             <tr id="headCilindro">
@@ -198,7 +198,7 @@
    <!-- FIM INJETORES -->
 
    <!-- PERIFÉRICOS -->
-   <div class="table-responsive table-ficha d-flex flex-column justify-content-between" style="width: 50vw;">
+   <div id="perifericos-comparacao" class="table-responsive table-ficha d-flex flex-column justify-content-between container-perifericos" style="width: 50vw; margin-right: 20px;">
       <table id="termopar" class="table-bordered" style="width: 100%">
          <tbody></tbody>
       </table>
