--- a/views/fichas/editHaitian.ejs
+++ b/views/fichas/editHaitian.ejs
@@ -2092,10 +2092,11 @@
                            <tr>
                               <!-- LADO FIXO -->
                               <td>
+                                 <label id="labelVapor" class="d-flex">Temperatura</label>
                                  <input style="width: 100%" id="vaporladofixo1" name="vaporladofixo1" value="<%= perifericos.vaporLadoFixo1 %>">
                               </td>
                               <td>
-                                 <p for="fixoAguaF1">Temp. Água Industrial F1</p>
+                                 <p for="fixoAguaF1">Água Industrial F1</p>
                               </td>
             
                               <!-- LADO MOVEL -->
@@ -2109,10 +2110,11 @@
                            <tr>
                               <!-- LADO FIXO -->
                               <td>
+                                 <label id="labelVapor" class="d-flex">Temperatura</label>
                                  <input style="width: 100%" id="vaporladofixo2" name="vaporladofixo2" value="<%= perifericos.vaporLadoFixo2 %>">
                               </td>
                               <td>
-                                 <p for="fixoAguaF2">Temp. Água Industrial F2</p>
+                                 <p for="fixoAguaF2">Água Industrial F2</p>
                               </td>
             
                               <!-- LADO MOVEL -->
@@ -2126,10 +2128,11 @@
                            <tr>
                               <!-- LADO FIXO -->
                               <td>
+                                 <label id="labelVapor" class="d-flex">Temperatura</label>
                                  <input style="width: 100%" id="vaporladofixo3" name="vaporladofixo3" value="<%= perifericos.vaporLadoFixo3 %>">
                               </td>
                               <td>
-                                 <p for="fixoVaporAgua">Temp. Água Gelada</p>
+                                 <p for="fixoVaporAgua">Água Gelada</p>
                               </td>
             
                               <!-- LADO MOVEL -->
@@ -2143,10 +2146,11 @@
                            <tr>
                               <!-- LADO FIXO -->
                               <td>
+                                 <label id="labelVapor" class="d-flex">Bar</label>
                                  <input style="width: 100%" id="vaporladofixo4" name="vaporladofixo4" value="<%= perifericos.vaporLadoFixo4 %>">
                               </td>
                               <td>
-                                 <p for="fixoVapor">Bar. Vapor</p>
+                                 <p for="fixoVapor">Vapor</p>
                               </td>
             
                               <!-- LADO MOVEL -->
@@ -2160,10 +2164,11 @@
                            <tr>
                               <!-- LADO FIXO -->
                               <td>
+                                 <label id="labelVapor" class="d-flex">Bar</label>
                                  <input style="width: 100%" id="vaporladofixo5" name="vaporladofixo5" value="<%= perifericos.vaporLadoFixo5 %>">
                               </td>
                               <td>
-                                 <p for="fixoAr">Bar. Ar Comprimido</p>
+                                 <p for="fixoAr">Ar Comprimido</p>
                               </td>
             
                               <!-- LADO MOVEL -->
