--- a/views/fichas/newFichaHaitian.ejs
+++ b/views/fichas/newFichaHaitian.ejs
@@ -973,10 +973,11 @@
                <tr>
                   <!-- LADO FIXO -->
                   <td>
+                     <label id="labelVapor" class="d-flex">Temperatura</label>
                      <input style="width: 100%" id="vaporladofixo1" name="vaporladofixo1">
                   </td>
                   <td>
-                     <p for="fixoAguaF1">Temp. Água Industrial F1</p>
+                     <p for="fixoAguaF1">Água Industrial F1</p>
                   </td>
 
                   <!-- LADO MOVEL -->
@@ -990,10 +991,11 @@
                <tr>
                   <!-- LADO FIXO -->
                   <td>
+                     <label id="labelVapor" class="d-flex">Temperatura</label>
                      <input style="width: 100%" id="vaporladofixo2" name="vaporladofixo2">
                   </td>
                   <td>
-                     <p for="fixoAguaF2">Temp. Água Industrial F2</p>
+                     <p for="fixoAguaF2">Água Industrial F2</p>
                   </td>
 
                   <!-- LADO MOVEL -->
@@ -1007,10 +1009,11 @@
                <tr>
                   <!-- LADO FIXO -->
                   <td>
+                     <label id="labelVapor" class="d-flex">Temperatura</label>
                      <input style="width: 100%" id="vaporladofixo3" name="vaporladofixo3">
                   </td>
                   <td>
-                     <p for="fixoVaporAgua">Temp. Água Gelada</p>
+                     <p for="fixoVaporAgua">Água Gelada</p>
                   </td>
 
                   <!-- LADO MOVEL -->
@@ -1024,10 +1027,11 @@
                <tr>
                   <!-- LADO FIXO -->
                   <td>
+                     <label id="labelVapor" class="d-flex">Bar</label>
                      <input style="width: 100%" id="vaporladofixo4" name="vaporladofixo4">
                   </td>
                   <td>
-                     <p for="fixoVapor">Bar. Vapor</p>
+                     <p for="fixoVapor">Vapor</p>
                   </td>
 
                   <!-- LADO MOVEL -->
@@ -1041,10 +1045,11 @@
                <tr>
                   <!-- LADO FIXO -->
                   <td>
+                     <label id="labelVapor" class="d-flex">Bar</label>
                      <input style="width: 100%" id="vaporladofixo5" name="vaporladofixo5">
                   </td>
                   <td>
-                     <p for="fixoAr">Bar. Ar Comprimido</p>
+                     <p for="fixoAr">Ar Comprimido</p>
                   </td>
 
                   <!-- LADO MOVEL -->
