--- a/views/revisao/editRevisao.ejs
+++ b/views/revisao/editRevisao.ejs
@@ -2079,10 +2079,11 @@
                <tr>
                   <!-- LADO FIXO -->
                   <td>
+                     <label id="labelVapor" class="d-flex">Temperatura</label>
                      <input style="width: 100%" id="vaporladofixo1" name="vaporladofixo1" value="<%= perifericos.vaporLadoFixo1 %>">
                   </td>
                   <td>
-                     <p for="fixoAguaF1">Temp. Água Industrial F1</p>
+                     <p for="fixoAguaF1">Água Industrial F1</p>
                   </td>
 
                   <!-- LADO MOVEL -->
@@ -2096,10 +2097,11 @@
                <tr>
                   <!-- LADO FIXO -->
                   <td>
+                     <label id="labelVapor" class="d-flex">Temperatura</label>
                      <input style="width: 100%" id="vaporladofixo2" name="vaporladofixo2" value="<%= perifericos.vaporLadoFixo2 %>">
                   </td>
                   <td>
-                     <p for="fixoAguaF2">Temp. Água Industrial F2</p>
+                     <p for="fixoAguaF2">Água Industrial F2</p>
                   </td>
 
                   <!-- LADO MOVEL -->
@@ -2113,10 +2115,11 @@
                <tr>
                   <!-- LADO FIXO -->
                   <td>
+                     <label id="labelVapor" class="d-flex">Temperatura</label>
                      <input style="width: 100%" id="vaporladofixo3" name="vaporladofixo3" value="<%= perifericos.vaporLadoFixo3 %>">
                   </td>
                   <td>
-                     <p for="fixoVaporAgua">Temp. Água Gelada</p>
+                     <p for="fixoVaporAgua">Água Gelada</p>
                   </td>
 
                   <!-- LADO MOVEL -->
@@ -2130,10 +2133,11 @@
                <tr>
                   <!-- LADO FIXO -->
                   <td>
+                     <label id="labelVapor" class="d-flex">Bar</label>
                      <input style="width: 100%" id="vaporladofixo4" name="vaporladofixo4" value="<%= perifericos.vaporLadoFixo4 %>">
                   </td>
                   <td>
-                     <p for="fixoVapor">Bar. Vapor</p>
+                     <p for="fixoVapor">Vapor</p>
                   </td>
 
                   <!-- LADO MOVEL -->
@@ -2147,10 +2151,11 @@
                <tr>
                   <!-- LADO FIXO -->
                   <td>
+                     <label id="labelVapor" class="d-flex">Bar</label>
                      <input style="width: 100%" id="vaporladofixo5" name="vaporladofixo5" value="<%= perifericos.vaporLadoFixo5 %>">
                   </td>
                   <td>
-                     <p for="fixoAr">Bar. Ar Comprimido</p>
+                     <p for="fixoAr">Ar Comprimido</p>
                   </td>
 
                   <!-- LADO MOVEL -->
